dynamic nav bar

--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -9,7 +9,7 @@
 
     <body>
 
-        {{> menu}}
+        {{> menu_admin}}
 
         <div class="container xs-12">
             <p><strong>Welcome Admin!</strong></p>
