--- a/views/admin_event.hbs
+++ b/views/admin_event.hbs
@@ -10,7 +10,7 @@
 
     <body>
 
-        {{> menu}}
+        {{> menu_admin}}
 
         <div class="col-md-12">
             <p class="form_text">Welcome Admin! </p>
