--- a/views/admin_home.hbs
+++ b/views/admin_home.hbs
@@ -11,7 +11,7 @@
 
     <body>
 
-        {{> menu}}
+        {{> menu_admin}}
         <div class="pic_container">
         <div class="bg col-md-12">
             <p class="form_text">Welcome Admin! </p>
