--- a/views/home.hbs
+++ b/views/home.hbs
@@ -10,7 +10,17 @@
 </head>
 
 <body>
-    <div>{{> menu}}</div>
+{{#ifCond user_type "vendor"}}
+    {{> menu_vendor}}
+{{else}}
+    {{#ifCond user_type "admin"}}
+        {{> menu_admin}}
+    {{else}}
+        {{#ifCond user_type "parent"}}
+            {{> menu_parent}}
+        {{/ifCond}}
+    {{/ifCond}}
+{{/ifCond}}
 
     <div class="container">
         <div class="homeContainer">
