--- a/views/vendor.hbs
+++ b/views/vendor.hbs
@@ -11,7 +11,7 @@
 
     <body>
 
-        {{> menu}}
+        {{> menu_vendor}}
 
         <div class="col-md-12">
             <p class="form_text">Welcome {{vendor}}! </p>
