--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -13,7 +13,17 @@
 </head>
 
 <body>
-    {{> menu}}
+{{#ifCond user_type "vendor"}}
+    {{> menu_vendor}}
+{{else}}
+    {{#ifCond user_type "admin"}}
+        {{> menu_admin}}
+    {{else}}
+        {{#ifCond user_type "parent"}}
+            {{> menu_parent}}
+        {{/ifCond}}
+    {{/ifCond}}
+{{/ifCond}}
 
     <div class="container">
         {{!-- <div class="dropdown" style="z-index: -1;">
