--- a/views/admin_event.hbs
+++ b/views/admin_event.hbs
@@ -53,7 +53,7 @@
                                     <a class="btn btn-info disabled">Approve</a>
                                     <a class="btn btn-info disabled">Edit</a>
                                 {{/ifCond}}
-                                <a href="/delete/{{event_id}}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete?')">Delete</a>
+                                <a class="btn btn-danger" onclick="eventDelete({{event_id}})">Delete</a>
                             </td>
                         </tr>
                         {{/each}}
