--- a/views/event.hbs
+++ b/views/event.hbs
@@ -1,80 +1,104 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <!-- Bootstrap CSS -->
-        {{> bootstrap}}
-        <link href="/css/menu.css" type="text/css" rel="stylesheet" />
-        <link href="/css/event.css" type="text/css" rel="stylesheet" />
-        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
-    </head>
 
-    <body>
+<head>
+    <!-- Bootstrap CSS -->
+    {{> bootstrap}}
+    <link href="/css/menu.css" type="text/css" rel="stylesheet" />
+    <link href="/css/event.css" type="text/css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+</head>
+
+<body>
     {{#ifCond user_type "vendor"}}
-        {{> menu_vendor}}
+    {{> menu_vendor}}
     {{else}}
-        {{#ifCond user_type "admin"}}
-            {{> menu_admin}}
-        {{else}}
-            {{#ifCond user_type "parent"}}
-                {{> menu_parent}}
-            {{/ifCond}}
-        {{/ifCond}}
+    {{#ifCond user_type "admin"}}
+    {{> menu_admin}}
+    {{else}}
+    {{#ifCond user_type "parent"}}
+    {{> menu_parent}}
     {{/ifCond}}
-        <div class="container col-xs-12">
-            <div class="row">
-                <div class="col-xs-6">
-                    <div class="jumbotron">
-                            <form class="form-inline">                                               
-                                <div class="inputGroup">
-                                    
-                                    <input type="checkbox" class="invis" id="allevents" value="getAllEvents" checked>
-                                    <label for="allevents">All Events</label>
-                                    </label>
-                                </div>
-                                {{#each data}}
-                                    <div class="inputGroup">
-                                    
-                                        <input type="checkbox" class="invis" value={{name}} id={{name}}>
-                                        <label for={{name}}>{{name}}</label>
-                    
-                                    </div>
-                                
-                                {{/each}}
-                                <br>
-
-                                <div class="form-group">
-                                    <input type="text" id="SearchBar" placeholder="Enter Event/Activity">
-                                </div>
-                                <button type="submit" class="btn btn-default" id="getData">Search</button>
-                            </form>
-                        
+    {{/ifCond}}
+    {{/ifCond}}
+    <div class="container col-xs-12">
+        {{#if notification_event}}
+        <div id="myModal" class="modal" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">{{notification_event.name}}</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
                     </div>
-                    <div class="col-xs-6">
-                    <div class="card" style="width: 50rem;">
-                    <div class="card-body" id="events">
-
+                    <div class="modal-body">
+                        <p>{{notification_event.description}}</p>
+                        <a href={{notification_event.link}}>Sign Up Now</a>
                     </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                     </div>
-                    
-                    </div>
-
-                </div>
-                <div class="col-xs-6">
-                
-                    Map View
-                    <div id="map"></div>
-                        <script src="/scripts/maps.js"></script>
-                        <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAN6q6jOWczlbNgBPd_ljm857YUqpyIoVU&callback=initMap">
-                        </script>
-                
                 </div>
             </div>
         </div>
-    <input class="invis" value="{{message}}" id="sqlstatus">   
-    </body>        
-           
-        
-    
+        <script>$('#myModal').modal()</script>
+        {{/if}}
+        <div class="row">
+            <div class="col-xs-6">
+                <div class="jumbotron">
+                    <form class="form-inline">
+                        <div class="inputGroup">
+
+                            <input type="checkbox" class="invis" id="allevents" value="getAllEvents" checked>
+                            <label for="allevents">All Events</label>
+                            </label>
+                        </div>
+                        {{#each data}}
+                        <div class="inputGroup">
+
+                            <input type="checkbox" class="invis" value={{name}} id={{name}}>
+                            <label for={{name}}>{{name}}</label>
+
+                        </div>
+
+                        {{/each}}
+                        <br>
+
+                        <div class="form-group">
+                            <input type="text" id="SearchBar" placeholder="Enter Event/Activity">
+                        </div>
+                        <button type="submit" class="btn btn-default" id="getData">Search</button>
+                    </form>
+
+                </div>
+                <div class="col-xs-6">
+                    <div class="card" style="width: 50rem;">
+                        <div class="card-body" id="events">
+
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+            <div class="col-xs-6">
+
+                Map View
+                <div id="map"></div>
+                <script src="/scripts/maps.js"></script>
+                <script async defer
+                    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAN6q6jOWczlbNgBPd_ljm857YUqpyIoVU&callback=initMap">
+                    </script>
+
+            </div>
+        </div>
+    </div>
+    <input class="invis" value="{{message}}" id="sqlstatus">
+</body>
+
+
+
 
 </html>
 
@@ -87,11 +111,11 @@
             text: "This event is already in your wishilsit",
             icon: "error",
         });
-    } else if(message == "added in wishlist"){
+    } else if (message == "added in wishlist") {
         Swal.fire({
             text: "This event is added in your wishilsit",
             icon: "success",
         });
     }
-    
+
 </script>
