--- a/views/vendor.hbs
+++ b/views/vendor.hbs
@@ -50,7 +50,7 @@
                                 {{else}}
                                     <a href="#" class="btn btn-info disabled">Edit</a>
                                 {{/ifCond}}
-                                <a href="/delete/{{event_id}}" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete?');">Delete</a>
+                                <a class="btn btn-danger" onclick="eventDelete({{event_id}})">Delete</a>
                             </td>
                         </tr>
                         {{/each}}
