--- a/views/login.hbs
+++ b/views/login.hbs
@@ -125,13 +125,13 @@
                                       <p>If you wish to create your children's profiles after you have created your account, you can skip this step.</p>
                                       <button type="button" class="submit1" id="P-Skip">Skip</button>
                                   </div>
-                                  <div class="modal-body container">
-                                      
+                                  <div class="modal-body container" style="max-height: calc(100vh - 200px); overflow-y: auto;">
+                                      <div class="tab" id="morekids">
                                           {{!-- {{>KidRegister}} --}}
                                          <div class="allInputs1">
                                                               
 
-                                            {{!-- <p>Mykid1
+                                            <p>Mykid1
                                               <input class="register-kid1" placeholder="Nickname1" id="kidname1" name="nickname1">
                                               is a 
                                             <span class="form-group">
@@ -142,12 +142,13 @@
                                             </span>
                                               who is interested in 
                                               <input class="register-kid1" type="text" name='interest1' id='interest1'>
-                                            </p> --}}
+                                            </p> 
                                         {{!-- <input type="button" value="Add a field" class="add" id="add" /> --}}
-                                        {{!-- <button type="button" class="submit1" id="add">Add more Fields</button>                     --}}    <div class="tab" id="morekids"></div>
-                                             <button type="button" class="submit1" id="more1">Add more Kids</button> 
+                                        <button type="button" class="submit1" id="add">Add more Fields</button>                         
+                                        {{!-- <div class="tab" id="morekids"></div>
+                                             <button type="button" class="submit1" id="more1">Add more Kids</button>  --}}
                                          </div>
-                                          
+                                      </div>    
                                           {{!-- <p>
                                               Mykid2
                                               <input class="register-kid" placeholder="Nickname2" name="nickname2" id="nickname2">
@@ -236,7 +237,7 @@
                           <div class="modal-dialog">
                               <div class="modal-content">
                                   <div class="modal-header">
-                                      <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                      <button type="button" class="close P-clear" data-dismiss="modal">&times;</button>
                                       <h4 class="modal-title">Registration Complete!</h4>
                                   </div>
                                   <div class="modal-body" id="B-3">
