--- a/views/landing.hbs
+++ b/views/landing.hbs
@@ -21,7 +21,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 
 <!-- Header -->
 <header class="w3-container w3-blue w3-center" style="padding:128px 16px; background-color: #f907fc; background-image: linear-gradient(315deg, #f907fc 0%, #05d6d9 74%);">
-  <img src="/css/src/logo.jpg" class="logo">
+  <img src="css/src/logo.jpg" class="logo">
   <h1 class="w3-margin w3-jumbo">Things My Kids Do</h1>
   <h3>Get <u>Your</u> Kids Involved In <u>Your</u> Local Community</h3>
   <h3>Sign Up Today As A Parent Or A Local Business To Get Your Event Out There!</h3>
@@ -42,20 +42,20 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 	   <h2>Features</h2>
 		<ul>
 			<li>
-				<img src="/css/src/feature1.jpg" style="height:50px; width:50px;" />
+				<img src="css/src/feature1.jpg" style="height:50px; width:50px;" />
 				<h3>Register</h3>
                 <p>Sign up today with your kid's age and activity interests</p>
             </li>
       
     <li>
-				<img src="/css/src/feature2.jpg" style="height:50px; width:50px;" />
+				<img src="css/src/feature2.jpg" style="height:50px; width:50px;" />
 				<h3>Search for Events</h3>
                 <p>As businesses continue to post the events their putting on for our kids, our apps database of events 
 				will grow and parents will be able to search and browse through our events to select which events our perfect for their little guy or girl!</p>
             </li>
  
     <li>
-				<img src="/css/src/feature3.jpg" style="height:50px; width:50px;" />
+				<img src="css/src/feature3.jpg" style="height:50px; width:50px;" />
 				<h3>Custom Notifications</h3>
                 <p>Create a custom wishlist of the types of events you wish to be notified about. As soon as an event is approved by our staff, you will immediately be 
 				notified if it is the type of event which your child is interested in</p>
@@ -70,7 +70,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 	
 
     <div class="w3-third w3-center">
-      <img src="/css/src/soccerEvent.jpg" style="height:250px; width=250px; position:relative; left:50px"  />
+      <img src="css/src/soccerEvent.jpg" style="height:250px; width=250px; position:relative; left:50px"  />
     </div>
   </div>
 </div>
@@ -79,7 +79,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-third w3-center">
-       <img src="/css/src/businessEvent.jpg" style="position: relative; right:100px; height:250px; width:250px;" />
+       <img src="css/src/businessEvent.jpg" style="position: relative; right:100px; height:250px; width:250px;" />
     </div>
 
     <div class="w3-twothird">
@@ -91,20 +91,20 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 	   <h2>Features</h2>
 		<ul>
 			<li>
-				<img src="/css/src/feature4.jpg" style="height:50px; width:50px;" />
+				<img src="css/src/feature4.jpg" style="height:50px; width:50px;" />
 				<h3>Publish Your Event</h3>
                 <p>After registering, use our intuitive interface to publish one or many events that you are putting on in the local community</p>
             </li>
       
     <li>
-				<img src="/css/src/feature5.jpg" style="height:50px; width:50px;" />
+				<img src="css/src/feature5.jpg" style="height:50px; width:50px;" />
 				<h3>Notify Parents Immediately</h3>
                 <p>Any parent registered with us will be immediately notified if the event you publish meets any of their child's interests. They will be give custom notifications
 				based on their search criteria and will be able to be directed to your website and where to sign up or register for your event</p>
             </li>
  
     <li>
-				<img src="/css/src/feature6.jpg" style="height:50px; width:50px;" />
+				<img src="css/src/feature6.jpg" style="height:50px; width:50px;" />
 				<h3>Become Featured on the Main Page</h3>
                 <p>Vendors will have the opportunity to be featured on a parent's landing page for ultimate exposure. Once registered, contact our administrator
 				to see how your event can be featured on the main page and seen my hundred of parents instantly!</p>
