--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -137,7 +137,7 @@
                     <tr>
                         
                         <td>
-                        <img src="/src/customIcons/{{category}}_icon.png" id="{{category}}img" style="width:50px;height:50px;border:0;" onerror="this.src='/src/testingIcon.jpg';">
+                        <img src="css/src/customIcons/{{category}}_icon.png" id="{{category}}img" style="width:50px;height:50px;border:0;" onerror="this.src='/src/testingIcon.jpg';">
                         </td>
                        
                         
