Jun finished parent register

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -130,12 +130,12 @@
                                           {{!-- {{>KidRegister}} --}}
                                          <div class="allInputs1">
                                                               
-
-                                            <p>Mykid1
-                                              <input class="register-kid1" placeholder="Nickname1" id="kidname1" name="nickname1">
+                                             <div class="Add_Kids1">
+                                                <p>Mykid1
+                                              <input class="register-kid1" placeholder="Nickname" id="kidname1" name="nickname1">
                                               is a 
                                             <span class="form-group">
-                                                <select id="gender1" class="register-Gender">
+                                                <select id="gender1" class="register-kid1">
                                                     <option>Boy</option>
                                                     <option>Girl</option>
                                                 </select>
@@ -143,12 +143,24 @@
                                               who is interested in 
                                               <input class="register-kid1" type="text" name='interest1' id='interest1'>
                                             </p> 
+                                             </div>
+                                            
                                         {{!-- <input type="button" value="Add a field" class="add" id="add" /> --}}
                                         <button type="button" class="submit1" id="add">Add more Fields</button>                         
                                         {{!-- <div class="tab" id="morekids"></div>
                                              <button type="button" class="submit1" id="more1">Add more Kids</button>  --}}
+
+                                        {{!-- <div class="modal-footer">
+                                            <button type="button" class="submit1" id="P-Redo-User">Back</button>                    
+                                            <button type="button" class="submit1" id="P-Kids">Continue</button>
+                                        </div> --}}
+                                        
                                          </div>
+
+                                         
+
                                       </div>    
+                                      
                                           {{!-- <p>
                                               Mykid2
                                               <input class="register-kid" placeholder="Nickname2" name="nickname2" id="nickname2">
@@ -175,14 +187,12 @@
                                               who is interested in
                                               <input class="register-kid" placeholder="Interest" name="interest3" id="interest3">
                                             </p>  --}}
-
-                                      
-
-                                  </div>
-                                  <div class="modal-footer">
-                                      <button type="button" class="submit1" id="P-Redo-User">Back</button>                    
-                                      <button type="button" class="submit1" id="P-Kids">Continue</button>
-                                  </div>
+                                            
+                                    </div>
+                                        <div class="modal-footer">
+                                            <button type="button" class="submit1" id="P-Redo-User">Back</button>                    
+                                            <button type="button" class="submit1" id="P-Kids">Continue</button>
+                                        </div>
                               </div>
                           </div>
                   </div>
