--- a/views/addevent_error.hbs
+++ b/views/addevent_error.hbs
@@ -7,6 +7,7 @@
     <link href="/css/vendor.css" type="text/css" rel="stylesheet" />
 
     <script src="/scripts/vendor.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     <script>
         if ({{isError}}) {
             alert("{{error}}")
