nav bar logo link to index

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -9,18 +9,13 @@
     <link href="/css/login.css" type="text/css" rel="stylesheet" />
     <link href="/css/register.css" type="text/css" rel="stylesheet" />
 
-    <script>
-        { { #ifCond errors 'aaaaaa' } }
-        alert("{{errors}}");
-        { { /ifCond}}
-    </script>
 </head>
 
 <body>
     <div id="bg">
         <nav class="navbar navbar-inverse" id="menuNav">
             <div class="container-fluid">
-                <div id="logoDiv"></div>
+                <a href="/index"><div id="logoDiv"></div></a>
                 <div class="navbar-header">
                     <a class="navbar-brand"></a>
                 </div>
