--- a/views/partials/menu_vendor.hbs
+++ b/views/partials/menu_vendor.hbs
@@ -2,7 +2,7 @@
     <header>
         <nav class="navbar navbar-inverse" id="menuNav"> 
           <div class="container-fluid">
-              <div id="logoDiv"></div>
+              <a href="/index"><div id="logoDiv"></div></a>
             <div class="navbar-header">
               <a class="navbar-brand"></a>
             </div>
