--- a/views/admin_event.hbs
+++ b/views/admin_event.hbs
@@ -36,9 +36,9 @@
                         {{#each data}}
                         <tr>
                             <td>{{event_id}} </td>
-                            <td>{{vendor_name}}</td>
+                            <td><a target="_blank" href="http://{{website}}">{{vendor_name}}</a></td>
                             <td><a href="mailto:{{email}}">{{contact_name}}</a></td>
-                            <td><a href="http://{{event_link}}">{{event_name}}</a></td>
+                            <td><a target="_blank" href="http://{{event_link}}">{{event_name}}</a></td>
                             <td>{{description}}</td>
                             <td>{{start_date}}</td>
                             <td>{{end_date}}</td>
