--- a/views/admin_user.hbs
+++ b/views/admin_user.hbs
@@ -44,7 +44,7 @@
                                 <td>{{contact_name}}</td>
                                 <td>{{vendor_name}}</td>
                                 <td>{{address}}</td>
-                                <td>{{website}}</td>
+                                <td><a target="_blank" href="http://{{website}}">{{website}}</a></td>
                                 <td>{{phone_num}}</td>
                                 <td>{{isApproved}}</td>
                                 <td>
