--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -77,7 +77,7 @@
                             <img src="/src/img.jpg" alt="John" style="width:100%">
                                 {{#if nickname}}
                                 <div id="{{nickname}}" style="font-size: 30px;">{{nickname}}
-                                <p>Hobbies: ##Wait for Register function##</p>
+                                     <p>Hobbies: {{interest}}</p>
                                 </div>
                                 {{/if}}
                             {{!-- <div id="billy" class="inv" style="font-size: 30px;">Billy
