--- a/style/login.css
+++ b/style/login.css
@@ -136,3 +136,87 @@ form.form1 {
         border-radius: 0px;
     }
 }
+
+.invisible {
+	display: none;
+	visibility: hidden;
+}
+
+.interests{
+	width: 30%;
+/*        color: rgb(38, 50, 56);
+	font-weight: 700;
+	font-size: 14px;
+	/*letter-spacing: 0.3px;*/
+/*        background: rgba(136, 126, 126, 0.04);
+	padding: 10px;
+	border: none;
+	border-radius: 20px;
+	outline: none;
+	box-sizing: border-box;
+	border: 2px solid rgba(0, 0, 0, 0.02);
+	/*margin-bottom: 50px;*/
+/*        margin-left: 5px;
+	margin-right: 5px;
+	text-align: left;
+	margin-bottom: 10px;
+	font-family: 'Ubuntu', sans-serif;
+*/    }
+/*      padding:0;
+  color: rgb(38, 50, 56);
+  font-weight: 700;
+  font-size: 14px;
+  
+  background: rgba(136, 126, 126, 0.04);
+  border: none;
+  border-radius: 20px;
+  outline: none;
+  box-sizing: border-box;
+  border: 2px solid rgba(0, 0, 0, 0.02);
+  margin-left: 5px;
+  margin-right: 5px;
+  text-align: left;
+  margin-bottom: 10px;
+  font-family: 'Ubuntu', sans-serif;
+  
+  
+*/  
+:root{
+  --text: "These activities";
+}
+.multiple_select
+{
+  height: 5px;
+  width: 20%;
+  overflow: hidden;
+  -webkit-appearance: menulist;
+  position: relative;
+}
+
+.multiple_select::before
+{
+  content: var(--text);
+  display: inline;
+  margin-left: 5px;
+}
+.multiple_select_active
+{
+  overflow: visible !important;
+}
+.multiple_select option
+{
+  display: none;
+  height: 5px;
+  background-color: white;
+}
+.multiple_select_active option
+{
+  display: block;
+}
+
+.multiple_select option::before {
+  content: "\2610";
+}
+.multiple_select option:checked::before {
+  content: "\2611";
+}  
