--- a/views/login.hbs
+++ b/views/login.hbs
@@ -74,10 +74,8 @@
                         <div class="modal-body">
                             <div class="tab">
                                 <p><input class="register" placeholder="Email address" name="email" id='p_email'></p>
-                                <p><input class="register" placeholder="Phone number" name="phone" id='p_phone'></p>
                                 <p><input class="register" placeholder="Password" name="pw" id='p_password'></p>
-                                <p><input class="register" placeholder="Comfirm Password" name="confirm_pw"
-                                        id='p_confirm_pw'></p>
+                                <p><input class="register" placeholder="Comfirm Password"  name="confirm_pw" id='p_confirm_pw'></p>
                             </div>
                         </div>
                         <div class="modal-footer">
@@ -136,10 +134,12 @@
                         <div class="modal-body container" style="max-height: calc(100vh - 200px); overflow-y: auto;">
                             <div class="tab" id="morekids">
                                 {{!-- {{>KidRegister}} --}}
+                                <p>click the "Create Kid profile" button to create a profile for your child.</p>
+                                        <p>you can create a maximum of 5 profiles during registration.</p>
                                 <div class="allInputs1">
 
                                     <div class="Add_Kids1">
-                                        <p>Mykid1
+                                        <p>sample Mykid1
                                             <input class="register-kid1" placeholder="Nickname" id="kidname1"
                                                 name="nickname1">
                                             is a
@@ -150,19 +150,16 @@
                                                 </select>
                                             </span>
                                             who is interested in
-                                            <input class="register-kid1" type="text" name='interest1' id='interest1'>
+                                            <span>
+                                                <select id="Kid-Interests" class="multiple_select" multiple="multiple">
+                                                {{#each data}}
+                                                    <option>{{name}}</option>
+                                                {{/each}}
+                                                </select>
+                                            </span>
                                         </p>
+                                        <button type="button" class="submit1" id="add">Create Kid Profile</button>                                    
                                     </div>
-
-                                    {{!-- <input type="button" value="Add a field" class="add" id="add" /> --}}
-                                    <button type="button" class="submit1" id="add">Add more Fields</button>
-                                    {{!-- <div class="tab" id="morekids"></div>
-                                             <button type="button" class="submit1" id="more1">Add more Kids</button>  --}}
-
-                                    {{!-- <div class="modal-footer">
-                                            <button type="button" class="submit1" id="P-Redo-User">Back</button>                    
-                                            <button type="button" class="submit1" id="P-Kids">Continue</button>
-                                        </div> --}}
 
                                 </div>
 
@@ -214,22 +211,17 @@
                             <button type="button" class="close P-clear" data-dismiss="modal">&times;</button>
                             <h4 class="modal-title">Confirm Account Info</h4>
                         </div>
-                        <div class="modal-body">
+                        <div class="modal-body" style="max-height: calc(100vh - 200px); overflow-y: auto;">
                             <div class="tab">
                                 <p>Parent Account</p>
                                 <form class="form-horizontal pf">
                                     <div class="form-group" style="margin-left:10px">
-                                        <label class="control-label">Email Address</label>
+                                        <label class="control-label" >Email Address</label>
                                         <div>
                                             <p class="form-control-static" id="Parent_Email"></p>
                                         </div>
                                     </div>
-                                    <div class="form-group" style="margin-left:10px">
-                                        <label class=" control-label">Phone Number</label>
-                                        <div class="">
-                                            <p class="form-control-static" id="Parent_Phone"></p>
-                                        </div>
-                                    </div>
+                                    
                                     <div class="form-group" style="margin-left:10px">
                                         <label class="control-label">Relationship to child</label>
                                         <div class="">
@@ -238,6 +230,26 @@
                                     </div>
                                 </form>
                                 <p>Children list</p>
+                                <form class="form-horizontal pf">
+                                    <div class="form-group" style="margin-left:10px">
+                                            <label class="control-label" >Nickname</label>
+                                            <div>
+                                                <p class="form-control-static" id="K1_Nickname"></p>
+                                            </div>
+                                    </div>
+                                    <div class="form-group" style="margin-left:10px">
+                                        <label class=" control-label" >Gender</label>
+                                        <div class="">
+                                            <p class="form-control-static" id="K1_Gender"></p>
+                                        </div>
+                                    </div>
+                                    <div class="form-group" style="margin-left:10px">
+                                        <label class=" control-label" >Interests</label>
+                                        <div class="" id="K1_interests">
+                                            <p class="form-control-static" id="K1_gender"></p>
+                                        </div>
+                                    </div>
+                                </form>
                             </div>
                             <hr class="my-2">
                             <div class="custom-control custom-checkbox">
@@ -387,7 +399,7 @@
                 </div>
             </form>
 
-            {{!-- <div class="modal fade" id="Business3" data-keyboard="false" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal fade" id="Business3" data-keyboard="false" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
                           <div class="modal-dialog">
                               <div class="modal-content">
                                   <div class="modal-header">
@@ -406,7 +418,7 @@
                                   </div>
                               </div>
                           </div>
-                  </div> --}}
+                  </div>
         </form>
     </div>
 
