--- a/views/admin_event.hbs
+++ b/views/admin_event.hbs
@@ -5,7 +5,7 @@
         {{> bootstrap}}        
         <link href="/css/menu.css" type="text/css" rel="stylesheet" />
         <link href="/css/admin.css" type="text/css" rel="stylesheet" />
-
+        <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
     </head>
 
     <body>
