--- a/views/landing.hbs
+++ b/views/landing.hbs
@@ -10,130 +10,183 @@
 <link rel="stylesheet" href="landing.css">
 
 <style>
-body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
-.w3-bar,h1,button {font-family: "Montserrat", sans-serif}
-.fa-anchor,.fa-coffee {font-size:200px}
+  body,
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-family: "Lato", sans-serif
+  }
+
+  .w3-bar,
+  h1,
+  button {
+    font-family: "Montserrat", sans-serif
+  }
+
+  .fa-anchor,
+  .fa-coffee {
+    font-size: 200px
+  }
 </style>
-<body>
 
-<!-- Navbar -->
+<body style="width: 100vw">
+
+  <!-- Navbar -->
 
 
-<!-- Header -->
-<header class="w3-container w3-blue w3-center" style="padding:128px 16px; background-color: #f907fc; background-image: linear-gradient(315deg, #f907fc 0%, #05d6d9 74%);">
-  <img src="css/src/logo.jpg" class="logo">
-  <h1 class="w3-margin w3-jumbo">Things My Kids Do</h1>
-  <h3>Get <u>Your</u> Kids Involved In <u>Your</u> Local Community</h3>
-  <h3>Sign Up Today As A Parent Or A Local Business To Get Your Event Out There!</h3>
-  
-  <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top"><a href="/login">Sign Up Today</a></button>
-</header>
+  <!-- Header -->
+  <header class="w3-container w3-blue w3-center"
+    style="padding:128px 16px; background-color: #f907fc; background-image: linear-gradient(315deg, #f907fc 0%, #05d6d9 74%);">
+    <img src="css/src/logo.jpg" class="logo">
+    <h1 class="w3-margin w3-jumbo">Things My Kids Do</h1>
+    <h3>Get <u>Your</u> Kids Involved In <u>Your</u> Local Community</h3>
+    <h3>Sign Up Today As A Parent Or A Local Business To Get Your Event Out There!</h3>
 
-<!-- First Grid -->
-<div class="w3-row-padding w3-padding-64 w3-container">
-  <div class="w3-content">
-    <div class="w3-twothird">
-      <h1>Parents</h1>
-      <h5 class="w3-padding-32">We know your busy. Managing your kids activities can be a full time job and a major hassle. Enter Things My Kids Do - the application that will notify parents about local
-       kid's activites and events based on your geographical area, your kid's age, and your kid's interests. Never miss out on another opportunity for your child with our interactive app!</h5>
+    <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top"><a href="/login">Sign Up
+        Today</a></button>
+  </header>
 
-      <p class="w3-text-grey">
-	   <div class="features">
-	   <h2>Features</h2>
-		<ul>
-			<li>
-				<img src="css/src/feature1.jpg" style="height:50px; width:50px;" />
-				<h3>Register</h3>
-                <p>Sign up today with your kid's age and activity interests</p>
-            </li>
-      
-    <li>
-				<img src="css/src/feature2.jpg" style="height:50px; width:50px;" />
-				<h3>Search for Events</h3>
-                <p>As businesses continue to post the events their putting on for our kids, our apps database of events 
-				will grow and parents will be able to search and browse through our events to select which events our perfect for their little guy or girl!</p>
-            </li>
- 
-    <li>
-				<img src="css/src/feature3.jpg" style="height:50px; width:50px;" />
-				<h3>Custom Notifications</h3>
-                <p>Create a custom wishlist of the types of events you wish to be notified about. As soon as an event is approved by our staff, you will immediately be 
-				notified if it is the type of event which your child is interested in</p>
-            </li>
- 
- 
-  </ul>
-</div>
-</p>
-</div>
-	
-	
+  <!-- First Grid -->
+  <div class="w3-row-padding w3-padding-64 w3-container">
+    <div class="w3-content">
+      <div class="w3-twothird">
+        <h1>Parents</h1>
+        <h5 class="w3-padding-32">We know your busy. Managing your kids activities can be a full time job and a major
+          hassle. Enter Things My Kids Do - the application that will notify parents about local
+          kid's activites and events based on your geographical area, your kid's age, and your kid's interests. Never
+          miss out on another opportunity for your child with our interactive app!</h5>
 
-    <div class="w3-third w3-center">
-      <img src="css/src/soccerEvent.jpg" style="height:250px; width=250px; position:relative; left:50px"  />
+        <p class="w3-text-grey">
+          <div class="features">
+            <h2>Features</h2>
+            <ul style="width:80vw;">
+              <li>
+                <img src="css/src/feature1.jpg" style="height:50px; width:50px;" />
+                <h3>Register</h3>
+                <div>
+                  <p>Sign up today with your kid's age and activity interests</p>
+                </div>
+              </li>
+
+              <li>
+                <img src="css/src/feature2.jpg" style="height:50px; width:50px;" />
+                <h3>Search for Events</h3>
+                <div>
+                  <p>As businesses continue to post the events their putting on for our kids, our apps database of
+                    events
+                    will grow and parents will be able to search and browse through our events to select which events
+                    our perfect for their little guy or girl!</p>
+                </div>
+
+              </li>
+
+              <li>
+                <img src="css/src/feature3.jpg" style="height:50px; width:50px;" />
+                <h3>Custom Notifications</h3>
+                <div>
+                  <p>Create a custom wishlist of the types of events you wish to be notified about. As soon as an event
+                    is approved by our staff, you will immediately be
+                    notified if it is the type of event which your child is interested in</p>
+                </div>
+              </li>
+
+
+            </ul>
+          </div>
+        </p>
+      </div>
+
+
+
+      <div class="w3-third w3-center">
+        <div style="width: 80vw;">
+          <img src="css/src/soccerEvent.jpg" style="height:250px; width=250px; position:relative;" />
+        </div>
+
+      </div>
     </div>
   </div>
-</div>
 
-<!-- Second Grid -->
-<div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
-  <div class="w3-content">
-    <div class="w3-third w3-center">
-       <img src="css/src/businessEvent.jpg" style="position: relative; right:100px; height:250px; width:250px;" />
-    </div>
+  <!-- Second Grid -->
+  <div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+    <div class="w3-content">
+      <div class="w3-third w3-center">
+        <img src="css/src/businessEvent.jpg" style="position: relative; right:100px; height:250px; width:250px;" />
+      </div>
 
-    <div class="w3-twothird">
-      <h1>Vendors</h1>
-      <h5 class="w3-padding-32">Are you a local business looking to get the event you're putting on for kids out there for all parents to see? Look no further. Sign up today as a vendor to post your event
-	   and get it seen by hundreds of parents who will immediately be notified if it is something their child is interested in. </h5>
+      <div class="w3-twothird">
+        <h1>Vendors</h1>
+        <h5 class="w3-padding-32">Are you a local business looking to get the event you're putting on for kids out there
+          for all parents to see? Look no further. Sign up today as a vendor to post your event
+          and get it seen by hundreds of parents who will immediately be notified if it is something their child is
+          interested in. </h5>
 
-      <p class="w3-text-grey"><div class="features">
-	   <h2>Features</h2>
-		<ul>
-			<li>
-				<img src="css/src/feature4.jpg" style="height:50px; width:50px;" />
-				<h3>Publish Your Event</h3>
-                <p>After registering, use our intuitive interface to publish one or many events that you are putting on in the local community</p>
-            </li>
-      
-    <li>
-				<img src="css/src/feature5.jpg" style="height:50px; width:50px;" />
-				<h3>Notify Parents Immediately</h3>
-                <p>Any parent registered with us will be immediately notified if the event you publish meets any of their child's interests. They will be give custom notifications
-				based on their search criteria and will be able to be directed to your website and where to sign up or register for your event</p>
-            </li>
- 
-    <li>
-				<img src="css/src/feature6.jpg" style="height:50px; width:50px;" />
-				<h3>Become Featured on the Main Page</h3>
-                <p>Vendors will have the opportunity to be featured on a parent's landing page for ultimate exposure. Once registered, contact our administrator
-				to see how your event can be featured on the main page and seen my hundred of parents instantly!</p>
-            </li>
- 
- 
-  </ul>
-</div></p>
+        <p class="w3-text-grey">
+          <div class="features">
+            <h2>Features</h2>
+            <ul style="width:80vw;">
+              <li>
+                <img src="css/src/feature4.jpg" style="height:50px; width:50px;" />
+                <div>
+                  <h3>Publish Your Event</h3>
+                  <p>After registering, use our intuitive interface to publish one or many events that you are putting
+                    on
+                    in the local community</p>
+                </div>
+              </li>
+
+              <li>
+                <img src="css/src/feature5.jpg" style="height:50px; width:50px;" />
+                <div>
+                  <h3>Notify Parents Immediately</h3>
+                  <p>Any parent registered with us will be immediately notified if the event you publish meets any of
+                    their child's interests. They will be give custom notifications
+                    based on their search criteria and will be able to be directed to your website and where to sign up
+                    or
+                    register for your event</p>
+                </div>
+              </li>
+
+              <li>
+                <img src="css/src/feature6.jpg" style="height:50px; width:50px;" />
+                <div>
+                  <h3>Become Featured on the Main Page</h3>
+
+                  <p>Vendors will have the opportunity to be featured on a parent's landing page for ultimate exposure.
+                    Once registered, contact our administrator
+                    to see how your event can be featured on the main page and seen my hundred of parents instantly!</p>
+                </div>
+              </li>
+
+
+            </ul>
+          </div>
+        </p>
+      </div>
     </div>
   </div>
-</div>
 
-<div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
+  <div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
     <h1 class="w3-margin w3-xlarge">Blog Posts</h1>
-</div>
+  </div>
 
-<!-- Footer -->
-<footer class="w3-container w3-padding-64 w3-center w3-opacity">  
-  <div class="w3-xlarge w3-padding-32">
-    <i class="fa fa-facebook-official w3-hover-opacity"></i>
-    <i class="fa fa-instagram w3-hover-opacity"></i>
-    <i class="fa fa-snapchat w3-hover-opacity"></i>
-    <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-    <i class="fa fa-twitter w3-hover-opacity"></i>
-    <i class="fa fa-linkedin w3-hover-opacity"></i>
- </div>
- <p>Powered by Dream Tech Designs</a></p>
-</footer>
+  <!-- Footer -->
+  <footer class="w3-container w3-padding-64 w3-center w3-opacity">
+    <div class="w3-xlarge w3-padding-32">
+      <i class="fa fa-facebook-official w3-hover-opacity"></i>
+      <i class="fa fa-instagram w3-hover-opacity"></i>
+      <i class="fa fa-snapchat w3-hover-opacity"></i>
+      <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+      <i class="fa fa-twitter w3-hover-opacity"></i>
+      <i class="fa fa-linkedin w3-hover-opacity"></i>
+    </div>
+    <p>Powered by Dream Tech Designs</a></p>
+  </footer>
 
 
 </body>
+
 </html>
